@@ -1,13 +1,12 @@
 name = File-DataClass-Storage-XML
 
 [Prereqs]
-perl                               = 5.01
-namespace::autoclean               = 0.19
-File::DataClass                    = v0.44.0
-Class::Method::ModifiersX::Augment = 0.001
-Moo                                = 1.005000
-XML::Bare                          = 0.47
-XML::Simple                        = 2.18
+perl                 = 5.01
+namespace::autoclean = 0.19
+File::DataClass      = v0.44.0
+Moo                  = 1.005000
+XML::Bare            = 0.47
+XML::Simple          = 2.18
 
 [Prereqs / ConfigureRequires]
 version           = 0.88
